--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_blurhash: ^0.7.0
   riverpod_annotation: ^2.1.0
   build_runner: ^2.3.3
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
