--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   build_runner: ^2.3.3
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  geolocator: ^9.0.2
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
