--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   geolocator: ^9.0.2
+  json_annotation: ^4.8.1
+  json_serializable: ^6.6.2
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
