--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   geolocator: ^9.0.2
   json_annotation: ^4.8.1
   json_serializable: ^6.6.2
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
