--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.6.2
   flutter_secure_storage: ^8.0.0
+  rustic: ^0.4.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
