--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_blurhash: ^0.7.0
   riverpod_annotation: ^2.1.0
   build_runner: ^2.3.3
+  flutter_gen_runner:
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   geolocator: ^9.0.2
