--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   retrofit: ^4.0.1
+  dio: ^5.1.1
   freezed: ^2.3.2
   auto_route: ^5.0.4
   flutter_riverpod: ^2.3.5
