--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   rustic: ^0.4.0
   flutter_launcher_icons: ^0.13.1
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
