--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   rustic: ^0.4.0
   flutter_launcher_icons: ^0.13.1
   flutter_colorpicker: ^1.0.3
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
