--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,8 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: 'assets/icon1.png'
-    background_color: '#hexcode'
-    theme_color: '#hexcode'
+    background_color: '#ffffff'
+    theme_color: '#ffffff'
   windows:
     generate: true
     image_path: 'assets/icon1.png'
@@ -97,7 +97,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
