--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_colorpicker: ^1.0.3
   flutter_local_notifications: ^16.1.0
+  flutter_client_sse: ^2.0.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
