--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   flutter_local_notifications: ^16.1.0
   flutter_client_sse: ^2.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
